[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Scenes/UI/VendorUI/ItemInVendor.gd" id="1_0casc"]
[ext_resource type="Texture2D" uid="uid://btg3s5w2f3fkv" path="res://icon.svg" id="2_3otv4"]
[ext_resource type="Theme" path="res://Textures/UItextures/ui.tres" id="3_med2r"]

[node name="ItemInVendor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0casc")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -73.0
offset_right = 76.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
icon_alignment = 1

[node name="Sprite" type="Sprite2D" parent="Button"]
texture_filter = 1
position = Vector2(74, 62)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_3otv4")

[node name="PriceLabel" type="Label" parent="Button"]
layout_mode = 0
offset_left = 3.0
offset_top = 123.0
offset_right = 63.0
offset_bottom = 152.0
theme = ExtResource("3_med2r")
theme_override_font_sizes/font_size = 32
text = "Price:
"

[node name="PriceValue" type="Label" parent="Button"]
layout_mode = 0
offset_left = 76.0
offset_top = 123.0
offset_right = 148.0
offset_bottom = 152.0
theme = ExtResource("3_med2r")
theme_override_font_sizes/font_size = 32
text = "
"

[node name="DamageValue" type="Label" parent="Button"]
layout_mode = 0
offset_left = 75.0
offset_top = 146.0
offset_right = 147.0
offset_bottom = 175.0
theme = ExtResource("3_med2r")
theme_override_font_sizes/font_size = 32

[node name="DamageLabel" type="Label" parent="Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 146.0
offset_right = 64.0
offset_bottom = 175.0
theme = ExtResource("3_med2r")
theme_override_font_sizes/font_size = 32
text = "Dmg:
"
